# butterwick-tech-perseus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  static.yml
pkg/: index.html
pkg/.perseus/: bundle.js  bundle.wasm
pkg/.perseus/page/xx-XX/: about.json
pkg/a test/: index.html
pkg/about/: index.html
src/: error_pages.rs  main.rs
src/components/: counter.rs  hello.rs  mod.rs
src/templates/: about.rs  index.rs
static/: styles.css
