[package]
name = "butterwick-tech-perseus"
version = "0.0.1"
edition = "2021"

[dependencies]
perseus = { version = "=0.4.0-beta.11", features = [ "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-warp = { version = "=0.4.0-beta.11", features = [ "dflt-server" ] }


[target.'cfg(target_arch = "wasm32")'.dependencies]